--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-    <title>Document</title>
+
+    <title>Tesla - Model S</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header__top">
+            <div class="header__logo logo">
+                <img class="logo__image" src="./img/logo.png" alt="Tesla">
+            </div>
+            <nav class="header__menu menu">
+                <a href="#" class="menu__item">Model S</a>
+                <a href="#" class="menu__item">Model X</a>
+                <a href="#" class="menu__item">Model 3</a>
+                <a href="#" class="menu__item">Roadster</a>
+                <a href="#" class="menu__item">Energy</a>
+            </nav>
+            <div class="header__actions actions">
+                <div class="actions__link">Магазин</div>
+                <div class="actions__link">Войти</div>
+                <button class="actions__button">
+                    <img src="./img/icons/menu.svg" alt="Открыть меню">
+                </button>
+            </div>
+        </div>
+        <div class="header__title title">
+            <h1 class="title__model">Model S</h1>
+            <h2 class="title__slogan">Добро пожаловать в будущее!</h2>
+            <img class="title__image" src="./img/car.png" alt="Tesla - model S">
+        </div>
+        <div class="header__merits merits">
+            <div class="merits__list">
+                <div class="merits__item">
+                    <div class="merits__icon"><img src="./img/icons/speed.svg" alt="Speed"></div>
+                    <div class="merits__velue"><span>2,7</span>сек</div>
+                    <div class="merits__descr">0-100 км/час</div>
+                </div>
+                <div class="merits__item">
+                    <div class="merits__icon"><img src="./img/icons/road.svg" alt="Road"></div>
+                    <div class="merits__velue"><span>632</span>км</div>
+                    <div class="merits__descr">запас хода</div>
+                </div>
+                <div class="merits__item">
+                    <div class="merits__velue">тест драйв</div>
+                </div>
+                <div class="merits__item">
+                    <div class="merits__icon"><img src="./img/icons/test.svg" alt="Speed"></div>
+                    <div class="merits__velue"><span>2,7</span>сек</div>
+                    <div class="merits__descr">0-100 км/час</div>
+                </div>
+                <div class="merits__item">
+                    <a href="#" class="merits__btn">заказать</a>
+                </div>
+            </div>
+        </div>
+        <div class="header__arrow arrow">
+            <a class="arrow__link" href="#">
+                <img class="arrow__image" src="./img/icons/arrow.svg" alt="Далее">
+            </a>
+        </div>
+    </header>
+
 </body>
+
 </html>
