add second block

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                     просторный интерьер для каждого пассажира.
                 </div>
                 <div class="aside__merits merits">
-                    <div class="merits__list">
+                    <div class="merits__list merits__list_vertical">
                         <div class="merits__item">
                             <div class="merits__icon">
                                 <img src="./img/icons/phone.svg" alt="17 дюймов">
                             </div>
                             <div class="merits__info">
-                                <div class="merits__value"><span>17</span>дюймов</div>
+                                <div class="merits__value"><span>17 </span>дюймов</div>
                                 <div class="merits__descr">Большой дисплей</div>
                             </div>
 
@@ -123,7 +123,7 @@
                                 <img src="./img/icons/bag.svg" alt="894 литра">
                             </div>
                             <div class="merits__info">
-                                <div class="merits__value"><span>894</span>литра</div>
+                                <div class="merits__value"><span>894 </span>литра</div>
                                 <div class="merits__descr">Объем грузового пространства</div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="aside__moreinfo moreinfo">
                     <a href="#" class="moreinfo__info">
-                        <img src="img/icons/info.svg" alt="Информация">
+                        <img class="moreinfo__image" src="img/icons/info.svg" alt="Информация">
                         <span>узнать больше</span>
                     </a>
                     <a href="#" class="moreinfo__order">заказать</a>
