add third block

--- a/index.html
+++ b/index.html
@@ -283,25 +283,23 @@
                 </div>
                 <div class="aside__moreinfo moreinfo">
                     <a href="#" class="moreinfo__info">
-                        <img src="img/icons/info.svg" alt="Информация">
+                        <img class="moreinfo__image" src="img/icons/info.svg" alt="Информация">
                         <span>узнать больше</span>
                     </a>
                     <a href="#" class="moreinfo__order">заказать</a>
                 </div>
             </aside>
-            <div class="detailing">
-                <div class="detailing__overlay"> <img src="./img/models.svg" alt="Model S"></div>
-                <div class="detailing__object"><img src="./img/car.png" alt=""></div>
-                <div class="detailing__list">
-                    <div class="detailing__front">Защита от удара спереди</div>
-                    <div class="detailing__side">Защита от удара сбоку</div>
-                    <div class="detailing__turn">Минимальный риск перевернуться в аварии</div>
+            <div class="protection__detailing detailing">
+                <div class="detailing__images">
+                    <div class="detailing__overlay"> <img src="./img/models.svg" alt="Model S"></div>
+                    <div class="detailing__object"><img src="./img/tesla_inside.png" alt=""></div>
+                </div>
+                <div class="created">
+                    <div class="created__name">разработано в <span>WebHero</span></div>
+                    <div class="created__descr">School</div>
                 </div>
             </div>
-            <div class="created">
-                <div class="created__name">разработано в <span>WebHero</span></div>
-                <div class="created__descr">School</div>
-            </div>
+
         </div>
     </section>
 </body>
